# textual-cards

./: .gitignore  README.md  deck  dev_meta  pyproject.toml  sample_deck.txt
textual_cards/: __main__.py  app.py  style.css  style.scss
textual_cards/screens/: decks_not_found.py  decks_path_not_found.py  no_decks_found.py  pick_deck.py  results.py
textual_cards/static/: ctp_colors.py
